--- a/simpleGame.html
+++ b/simpleGame.html
@@ -105,7 +105,7 @@
 							
 							if(rows[i][j].innerHTML === "X" && rows[i+1][j].innerHTML == "X" && rows[i+2][j].innerHTML == "X")
 							{
-								turnYellow([rows[i][j], rows[j+1][j], rows[i+2][j]], "Red");
+								turnYellow([rows[i][j], rows[i+1][j], rows[i+2][j]], "Red");
 							}
 						}
 					}
